<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.fithou.lap.chat.SettingsActivity">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_img_avatar"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/man"
        />

    <TextView
        android:id="@+id/settings_text_display_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_img_avatar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/settings_display_name"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/settings_text_status"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_text_display_name"
        android:layout_centerHorizontal="true"
        android:text="@string/settings_status"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/settings_changimg_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="101dp"
        android:background="@android:color/white"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/change_image"
        android:textColor="@color/colorPrimaryDark" />

    <Button
        android:id="@+id/settings_status_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="29dp"
        android:background="@android:color/holo_red_dark"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/change_status"
        android:textColor="@android:color/white" />

</RelativeLayout>
