<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.fithou.lap.chat.RegisterActivity">

    <include
        android:id="@+id/reg_toolbar"
        layout="@layout/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginTop="80dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/reg_toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_account"
        android:id="@+id/text_create"
        android:layout_alignParentTop="true"
        />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/reg_display_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_create"
        android:layout_centerHorizontal="true"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginTop="45dp">

        <EditText
            android:id="@+id/edt_display_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/display_name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_display_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:id="@+id/reg_email">

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:includeFontPadding="false"
            android:isScrollContainer="false" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/reg_password"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp">

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/password" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_alignParentEnd="true"
        android:id="@+id/btn_create_reg"
        android:textColor="@android:color/white"
        android:background="@android:color/holo_red_dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_password"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:text="@string/create_account" />

</RelativeLayout>
